spaced out product filter boxes

--- a/products.html
+++ b/products.html
@@ -68,6 +68,7 @@
       .filter {
         display: block;
         position: relative;
+        padding: 8px;
         padding-left: 35px;
         margin-bottom: 12px;
         cursor: pointer;
@@ -212,7 +213,7 @@
               <a href = "paperRed.html"><img width = "200" height = "200" src = "Images/paperRed.png"></a>
             </div>
             <div class = "product-desc">
-              <br><h4>Red Printer Paper<br>11<q>x17</q></h4>
+              <br><h4>Red Printer Paper</h4>
             </div>
           </div>
           <div class = "grid-product" data-color= "purple" data-size = "size11_17">
