--- a/FAQ.html
+++ b/FAQ.html
@@ -8,7 +8,7 @@
 <body class = "body">
 <div class = "nav">
 	<img class = "leftNav" src="Images/Dunder_Mifflin_logo.png" width="140" height="80">
-	<a class = "leftNav" href="home.html"> HOME</a>
+	<a class = "leftNav" href="index.html"> HOME</a>
 	<a class = "leftNav" href="products.html"> PAPER</a>
 	<a class = "leftNav" href="about.html"> ABOUT</a>
 	<a class = "leftNav" href="FAQ.html"> FAQ</a>
