fixed the nav bar in most pages

--- a/DMTOS.html
+++ b/DMTOS.html
@@ -4,7 +4,7 @@
 <title>Dunder Mifflin</title>
 
 <link href = "StyleSheet.css" rel = "stylesheet">
-<link href = "IshaniStyleSheet.css" rel = "stylesheet">
+<link href = "CheckoutStyleSheet.css" rel = "stylesheet">
 
 </head>
 
@@ -31,7 +31,7 @@
 	<h2>TERMS OF SERVICE</h2><br>
 	Buy paper.
 	</center>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</body>
 
 <footer class="footer">
