--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
 <title>About | DUNDER MIFFLIN</title>
 <link href = "StyleSheet.css" rel = "stylesheet">
+<link href = "CheckoutStyleSheet.css" rel = "stylesheet">
 
 </head>
 
@@ -61,7 +62,7 @@ once again. We are no longer affiliated with Sabre.<br><br><br>
 </body>
 
 
-<br></br>
+<br><br><br><br><br>
 
 
 <footer class="footer">
