--- a/home.html
+++ b/home.html
@@ -4,6 +4,8 @@
 <title>HOME | DUNDER MIFFLIN</title>
 
 <link href = "StyleSheet.css" rel = "stylesheet">
+<link href = "CheckoutStyleSheet.css" rel = "stylesheet">
+
 
 </head>
 
