--- a/login.html
+++ b/login.html
@@ -4,7 +4,8 @@
 <title>Dunder Mifflin</title>
 
 <link href = "StyleSheet.css" rel = "stylesheet">
-<link href = "IshaniStyleSheet.css" rel = "stylesheet">
+<link href = "CheckoutStyleSheet.css" rel = "stylesheet">
+
 
 </head>
 
@@ -57,7 +58,9 @@
 
 
 
-  <br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
 
 
 </body>
