--- a/paperBlue.html
+++ b/paperBlue.html
@@ -3,6 +3,8 @@
   <title>Copy Paper: 8.5x11 Blue | DUNDER MIFFLIN</title>
   <head>
     <link href = "StyleSheet.css" rel = "stylesheet">
+    <link href = "CheckoutStyleSheet.css" rel = "stylesheet">
+
     <link href = "paperStyle.css" rel = "stylesheet">
   </head>
   <!--Header links-->
