--- a/paperTemplate.html
+++ b/paperTemplate.html
@@ -2,9 +2,9 @@
 <html>
   <title>Paper | DUNDER MIFFLIN</title>
   <head>
-    <link rel="stylesheet" href="IshaniStyleSheet.css">
-
     <link href = "StyleSheet.css" rel = "stylesheet">
+    <link href = "CheckoutStyleSheet.css" rel = "stylesheet">
+
     <link href = "paperStyle.css" rel = "stylesheet">
   </head>
   <!--Header links-->
