--- a/FAQ.html
+++ b/FAQ.html
@@ -3,6 +3,8 @@
 <head>
 <title>FAQ | DUNDER MIFFLIN</title>
 <link href = "StyleSheet.css" rel = "stylesheet">
+<link href = "CheckoutStyleSheet.css" rel = "stylesheet">
+
 
 </head>
 <body class = "body">
