--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>HOME | DUNDER MIFFLIN</title>
 
 <link href = "StyleSheet.css" rel = "stylesheet">
+<link href = "CheckoutStyleSheet.css" rel = "stylesheet">
 
 </head>
 
