--- a/products.html
+++ b/products.html
@@ -4,6 +4,7 @@
   <head>
     <script src="products.js"></script>
     <link href = "StyleSheet.css" rel = "stylesheet">
+    <link href = "CheckoutStyleSheet.css" rel = "stylesheet"> 
     <!--The style of the page goes here-->
     <style>
       h1 {
@@ -139,20 +140,20 @@
 
   <!--Navigation links-->
   <body class = "body">
-      <div class = "nav">
-        <img class = "leftNav" src="Images/Dunder_Mifflin_logo.png" width="140" height="80">
-        <a class = "leftNav" href="index.html"> HOME</a>
-        <a class = "leftNav" href="products.html"> PAPER</a>
-        <a class = "leftNav" href="about.html"> ABOUT</a>
-        <a class = "leftNav" href="FAQ.html"> FAQ</a>
-        <a class = "rightNav" href = "login.html">LOG IN</a>
-        <a class = "rightNav" href = "cart.html"><img class = "rightImg" width = "30" 
-          height = "30" src = "Images/cart_icon.png"></a>
-        <form class = "rightNav"><input type = "search" placeholder = "Search" 
-          style="width: 300px; padding: 9px 20px; margin: 18px 10px; 
-          display:inline-block; border: 1px solid#ccc; box-sizing: 
-          border-box;"></form>
-      </div>
+    <div class = "nav">
+      <img class = "leftNav" src="Images/Dunder_Mifflin_logo.png" width="140" height="80">
+      <a class = "leftNav" href="index.html"> HOME</a>
+      <a class = "leftNav" href="products.html"> PAPER</a>
+      <a class = "leftNav" href="about.html"> ABOUT</a>
+      <a class = "leftNav" href="FAQ.html"> FAQ</a>
+      <a class = "rightNav" href = "login.html">LOG IN</a>
+      <a class = "rightNav" href = "cart.html"><img class = "rightImg" width = "30" 
+        height = "30" src = "Images/cart_icon.png"></a>
+      <form class = "rightNav"><input type = "search" placeholder = "Search" 
+        style="width: 300px; padding: 9px 20px; margin: 18px 10px; 
+        display:inline-block; border: 1px solid#ccc; box-sizing: 
+        border-box;"></form>
+    </div>
     <main>
       <font face = "Times New Roman"><br><br><br>
         <center><img src="Images/Dunder_Mifflin_logo_Black.png" width=200px></center><br><br>
