--- a/register.html
+++ b/register.html
@@ -4,6 +4,8 @@
 <title>Dunder Mifflin</title>
 
 <link href = "StyleSheet.css" rel = "stylesheet">
+<link href = "CheckoutStyleSheet.css" rel = "stylesheet">
+
 
 </head>
 
@@ -57,7 +59,7 @@
 
     </tr>
 
-  </table><br><br><br><br><br><br>
+  </table><br><br><br><br><br><br><br><br>
   </center></body></font>
 
 
