--- a/template.html
+++ b/template.html
@@ -4,7 +4,8 @@
 <title>Dunder Mifflin</title>
 
 <link href = "StyleSheet.css" rel = "stylesheet">
-<link href = "IshaniStyleSheet.css" rel = "stylesheet">
+<link href = "CheckoutStyleSheet.css" rel = "stylesheet">
+
 
 </head>
 
