--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
 
         <h1>LOGIN</h1>
   <div class="container">
-      <form>
+      <form action="login.php" method="get">
         <input type="text" name="username" placeholder="Username" required style="width: 80%;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
         <input type="password" name="password" placeholder="Password" required style="width: 80%;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
         <input type="submit" value="LOGIN" style="background-color: #036ba8;color: white;padding: 14px 20px;margin: 8px 0;border: none;cursor: pointer;width: 80%;">
