fixed ANOTHER bug with database; added template

--- a/paperWhite.html
+++ b/paperWhite.html
@@ -26,7 +26,7 @@
     <font face = "Times New Roman">
       <div class = "grid-container">
         <div id = "product-image">
-          <img width="400" height = "400" src = "Images/PaperWhite.png">
+          <img width="400" height = "400" src = "Images/paperWhite.png">
         </div>
         <div id = "product-name">
           <h2>Copy Paper: 8.5<q>x11</q> White</h2>
