--- a/register.html
+++ b/register.html
@@ -35,7 +35,7 @@
 
         <h1>REGISTER</h1>
   <div class="container">
-      <form>
+      <form action="registerGet.php" method="get">
         <input type="text" name="FirstName" placeholder="First Name" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
         <input type="text" name="LastName" placeholder="Last Name" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
 
