JS added to scroll nav

--- a/template.html
+++ b/template.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body class = "body">
+<body class = "body" id = "navbar">
 <div class = "nav">
 	<img class = "leftNav" src="Images/Dunder_Mifflin_logo.png" width="140" height="80">
 	<a class = "leftNav" href="index.html"> HOME</a>
@@ -25,10 +25,11 @@
 		border-box;"></form>
 </div>
 
-<img src="Images/Header_Image.png" width="101%">
+<img class = "img" src="Images/Header_Image.png" width="101%">
 <br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br>
+<script src = "EJS.js"></script>
 </body>
 
 <footer class="footer">
