--- a/paperWhite.html
+++ b/paperWhite.html
@@ -44,10 +44,13 @@
           works as hard as you do. This dependable, everyday copy paper runs great through all types of equipment.
           <br><b>100% Recycled Paper!</b><br><b>99.92% Jam Free-Guarantee!</b></p>
         </div>
-        <div class = "product-buy">
+
+        <form action="cart.php" method="get">
+          <div class = "product-buy">
             <b>Price: $9.99</b><br><br>
-            <input type="button" id="product-button-buy" value="Add to Cart">
+            <input type="submit" name="addPaperWhite" id="product-button-buy" value="Add to Cart">
         </div>
+      </form>
         <div id="similar-products-title">
           <b>Similar Products</b>
         </div>
