--- a/home.html
+++ b/home.html
@@ -3,10 +3,19 @@
 <head>
 <title>HOME | DUNDER MIFFLIN</title>
 
-<link href = "StyleSheet.css" rel = "stylesheet">
-<link href = "CheckoutStyleSheet.css" rel = "stylesheet">
-<link href = "carousel.css" rel = "stylesheet">
-<link href = "carousel2.css" rel = "stylesheet">
+
+<script src="isLoggedIn.js"></script>
+
+<div class = "nav">
+	<img class = "leftNav" src="Images/Dunder_Mifflin_logo.png" width="140" height="80">
+	<a class = "leftNav" href="home.html"> HOME</a>
+	<a class = "leftNav" href="products.html"> PAPER</a>
+	<a class = "leftNav" href="about.html"> ABOUT</a>
+	<a class = "leftNav" href="FAQ.html"> FAQ</a>
+
+
+	<a class = "rightNav" href = "login.html" id="loginStatus"></a>
+
 
 </head>
 
