--- a/home.html
+++ b/home.html
@@ -3,14 +3,10 @@
 <head>
 <title>HOME | DUNDER MIFFLIN</title>
 
-<div class = "nav">
-	<img class = "leftNav" src="Images/Dunder_Mifflin_logo.png" width="140" height="80">
-	<a class = "leftNav" href="home.html"> HOME</a>
-	<a class = "leftNav" href="products.html"> PAPER</a>
-	<a class = "leftNav" href="about.html"> ABOUT</a>
-	<a class = "leftNav" href="FAQ.html"> FAQ</a>
-	<a class = "rightNav" href = "login.html"></a>
-
+<link href = "StyleSheet.css" rel = "stylesheet">
+<link href = "CheckoutStyleSheet.css" rel = "stylesheet">
+<link href = "carousel.css" rel = "stylesheet">
+<link href = "carousel2.css" rel = "stylesheet">
 
 </head>
 
@@ -43,20 +39,20 @@
         <input class='sections5' id='section3' name='carousel5' type='radio'>
         <div class='controls5'>
           <label class='controlLooks5' for='section2'>
-            ]
+            >
           </label>
         </div>
         <div class='controls5'>
           <label class='controlLooks5' for='section1'>
-            [
+            <
           </label>
           <label class='controlLooks5' for='section3'>
-            ]
+            >
           </label>
         </div>
         <div class='controls5'>
           <label class='controlLooks5' for='section2'>
-            [
+            <
           </label>
         </div>
         <div class='visible5'>
@@ -64,7 +60,7 @@
             <div class= "item5 item1">
               <div class= "slider5">
                 <img src = "Images/PaperCASE.png" width = "450" height = "450">
-		<div class="text5">Copy Paper</div>
+		<div class="text5">Case of white copy</div>
               </div>
             </div>
             <div class= "item5 item1">
@@ -95,37 +91,37 @@
         <input class='sections' id='section6' name='carousel' type='radio'>
         <div class='controls'>
           <label class='controlLooks' for='section5'>
-            ]
+            >
           </label>
         </div>
         <div class='controls'>
           <label class='controlLooks' for='section4'>
-            [
+            <
           </label>
           <label class='controlLooks' for='section6'>
-            ]
+            >
           </label>
         </div>
         <div class='controls'>
           <label class='controlLooks' for='section5'>
-            [
+            <
           </label>
         </div>
         <div class='visible'>
           <div class='transition'>
             <div class= "item item3">
               <div class= "slider">
-                <img src = "Images/paperBlue.png" width = "250" height = "250">
+                <img src = "Images/paperWhite.png" width = "250" height = "250">
               </div>
             </div>
             <div class= "item item3">
               <div class= "slider">
-                <img src = "Images/paperRed.png" width = "250" height = "250">
+                <img src = "Images/origamiWhite.png" width = "250" height = "250">
               </div>
             </div>
             <div class= "item item3">
               <div class="slider">
-                <img src = "Images/paperYellow.png" width = "250" height = "250">
+                <img src = "Images/craftWhite.jpg" width = "250" height = "250">
               </div>
             </div>
             <div class= "item item3">
