--- a/home.html
+++ b/home.html
@@ -151,7 +151,7 @@
 
 <br><br><br><br><br>
 
-<img id="img" src="Images/ad_sabre.png"/>
+<img id="img" width="50%" src="Images/ad_sabre.png"/>
 
 <br><br><br><br><br>
 <script src = "EJS.js"></script>
