Home Page final look

--- a/home.html
+++ b/home.html
@@ -25,13 +25,13 @@
 		display:inline-block; border: 1px solid#ccc; box-sizing: 
 		border-box;"></form>
 </div>
-
+<br><br><br><br><br><br><br>
 <img class = "img" src="Images/Header_Image.png" width="101%">
 
 <center>
-<br><br><br><br><br>
-<div style = "font-size: 60px;">Featured Products</div>
-<br><br><br><br><br><br><br>
+<br>
+<h1 style = "font-size: 80px;">Featured Products</h1>
+<br><br>
 <div class="slider5">
       <div class="carousel5">
         <input checked="checked" class="sections5" id="section1" name="carousel5" type="radio">
@@ -60,19 +60,19 @@
             <div class= "item5 item1">
               <div class= "slider5">
                 <img src = "Images/PaperCASE.png" width = "450" height = "450">
-		<div class="text5">Case of white copy</div>
+		<div class="text5">White Special Copy Paper</div>
               </div>
             </div>
             <div class= "item5 item1">
               <div class= "slider5">
-                <img src = "Images/paperRed.png" width = "450" height = "450">
-		<div class="text6">Sample Text</div>
+                <img src = "Images/origamiRed.png" width = "450" height = "450">
+		<div class="text6">Red Origami Paper</div>
               </div>
             </div>
             <div class= "item5 item1">
               <div class="slider5">
-                <img src = "Images/paperYellow.png" width = "450" height = "450">
-		<div class="text7">Sample Text</div>
+                <img src = "Images/paperBlue.png" width = "450" height = "450">
+		<div class="text7">Blue Paper</div>
               </div>
             </div>
           </div>
@@ -80,9 +80,11 @@
       </div>
 </div>
 
-<br><br><br><br><br><br><br>
-<h1>Popular Products</h1>
-<br><br><br><br><br><br><br>
+<br><br>
+<img width = "50%" id="img" src="Images/ad_sabre.png"/>
+<br><br><br><br><br>
+<h1 style = "font-size: 80px;">Popular Products</h1>
+<br><br>
 
 <div class="slider">
       <div class='carousel'>
@@ -112,46 +114,61 @@
             <div class= "item item3">
               <div class= "slider">
                 <img src = "Images/paperWhite.png" width = "250" height = "250">
+		<div class = "name1">White Paper</div>
               </div>
             </div>
             <div class= "item item3">
               <div class= "slider">
                 <img src = "Images/origamiWhite.png" width = "250" height = "250">
+		<div class = "name2">White Origami<br>Paper</div>
               </div>
             </div>
             <div class= "item item3">
               <div class="slider">
                 <img src = "Images/craftWhite.jpg" width = "250" height = "250">
+		<div class = "name3">White Craft<br>Paper</div>
               </div>
             </div>
             <div class= "item item3">
               <div class= "slider">
                 <img src = "Images/paperBlue.png" width = "250" height = "250">
+		<div class = "name4">Blue Paper</div>
               </div>
             </div>
             <div class= "item item3">
               <div class= "slider">
                 <img src = "Images/paperRed.png" width = "250" height = "250">
+		<div class = "name5">Red Paper</div>
               </div>
             </div>
             <div class= "item item3">
               <div class= "slider">
                 <img src = "Images/paperYellow.png" width = "250" height = "250">
+		<div class = "name6">Yellow Paper</div>
               </div>
             </div>
             <div class= "item item3">
               <div class= "slider">
-                <img src = "Images/paperBlue.png" width = "250" height = "250">
+                <img src = "Images/craftBlue.png" width = "250" height = "250">
+		<div class = "name7">Blue Craft<br>Paper</div>
+              </div>
+            </div>
+	    <div class= "item item3">
+              <div class= "slider">
+                <img src = "Images/paperPink.png" width = "250" height = "250">
+		<div class = "name8">Pink Paper</div>
+              </div>
+            </div>
+	    <div class= "item item3">
+              <div class= "slider">
+                <img src = "Images/origamiPurple.png" width = "250" height = "250">
+		<div class = "name9">Purple Origami<br>Paper</div>
               </div>
             </div>
           </div>
         </div>
       </div>
 </div>
-
-<br><br><br><br><br>
-
-<img id="img" width="50%" src="Images/ad_sabre.png"/>
 
 <br><br><br><br><br>
 <script src = "EJS.js"></script>
