--- a/home.html
+++ b/home.html
@@ -55,19 +55,25 @@
           <div class='transition5'>
             <div class= "item5 item1">
               <div class= "slider5">
+		<a href = 'redirect.php?product_id=19'>
                 <img src = "Images/PaperCASE.png" width = "450" height = "450">
+		</a>
 		<div class="text5">White Special Copy Paper</div>
               </div>
             </div>
             <div class= "item5 item1">
               <div class= "slider5">
+		<a href = 'redirect.php?product_id=15'>
                 <img src = "Images/origamiRed.png" width = "450" height = "450">
+		</a>
 		<div class="text6">Red Origami Paper</div>
               </div>
             </div>
             <div class= "item5 item1">
               <div class="slider5">
+		<a href = 'redirect.php?product_id=5'>
                 <img src = "Images/paperBlue.png" width = "450" height = "450">
+		</a>
 		<div class="text7">Blue Paper</div>
               </div>
             </div>
@@ -109,55 +115,73 @@
           <div class='transition'>
             <div class= "item item3">
               <div class= "slider">
+		<a href = 'redirect.php?product_id=1'>
                 <img src = "Images/paperWhite.png" width = "250" height = "250">
+		</a>
 		<div class = "name1">White Paper</div>
               </div>
             </div>
             <div class= "item item3">
               <div class= "slider">
+		<a href = 'redirect.php?product_id=13'>
                 <img src = "Images/origamiWhite.png" width = "250" height = "250">
+		</a>
 		<div class = "name2">White Origami<br>Paper</div>
               </div>
             </div>
             <div class= "item item3">
               <div class="slider">
+		<a href = 'redirect.php?product_id=7'>
                 <img src = "Images/craftWhite.jpg" width = "250" height = "250">
-		<div class = "name3">White Craft<br>Paper</div>
+		</a>
+		<div class = "name3">White Kraft<br>Paper</div>
               </div>
             </div>
             <div class= "item item3">
               <div class= "slider">
+		<a href = 'redirect.php?product_id=5'>
                 <img src = "Images/paperBlue.png" width = "250" height = "250">
+		</a>
 		<div class = "name4">Blue Paper</div>
               </div>
             </div>
             <div class= "item item3">
               <div class= "slider">
+		<a href = 'redirect.php?product_id=3'>
                 <img src = "Images/paperRed.png" width = "250" height = "250">
+		</a>
 		<div class = "name5">Red Paper</div>
               </div>
             </div>
             <div class= "item item3">
               <div class= "slider">
+		<a href = 'redirect.php?product_id=2'>
                 <img src = "Images/paperYellow.png" width = "250" height = "250">
+		</a>
 		<div class = "name6">Yellow Paper</div>
               </div>
             </div>
             <div class= "item item3">
               <div class= "slider">
+		<a href = 'redirect.php?product_id=11'>
                 <img src = "Images/craftBlue.png" width = "250" height = "250">
-		<div class = "name7">Blue Craft<br>Paper</div>
+		</a>
+		<div class = "name7">Blue Kraft<br>Paper</div>
               </div>
             </div>
 	    <div class= "item item3">
               <div class= "slider">
+		<a href = 'redirect.php?product_id=6'>
                 <img src = "Images/paperPink.png" width = "250" height = "250">
+		</a>
 		<div class = "name8">Pink Paper</div>
               </div>
             </div>
 	    <div class= "item item3">
               <div class= "slider">
+		<a href = 'redirect.php?product_id=16'>
                 <img src = "Images/origamiPurple.png" width = "250" height = "250">
+		</a>
 		<div class = "name9">Purple Origami<br>Paper</div>
               </div>
             </div>
